Misc: Change name.

--- a/etc/limine.cfg
+++ b/etc/limine.cfg
@@ -1,7 +1,7 @@
 TIMEOUT=20
 
-:Storm
+:Qnixx
 
 PROTOCOL=limine
-KERNEL_PATH=boot:///Storm/kernel.sys
+KERNEL_PATH=boot:///Qnixx/kernel.sys
 RESOLUTION=1920x1080x32
