Feat: Using autoconf.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,16 +1,11 @@
-LOCAL_IP = 192.168.1.152
 INSTALL_DIR = /qnixx_install
 QEMU_ARGS = -cpu qemu64 -M q35 -m 3G -cdrom Qnixx.iso -boot d -smp 4 -rtc base=localtime -audiodev pa,id=audio0 -machine pcspk-audiodev=audio0 
-CFILES = $(shell find sys/src/ -name "*.c")
-CFLAGS = -fexceptions -std=gnu11 -ffreestanding -fno-stack-protector \
-  -fno-pic -Werror=implicit -Werror=implicit-function-declaration -Werror=implicit-int \
-  -Werror=int-conversion \
-  -Werror=incompatible-pointer-types -Werror=int-to-pointer-cast -Werror=return-type -Wunused \
-  -mabi=sysv -mno-80387 -mno-mmx \
-  -mno-3dnow -mno-sse -mno-sse2 -mno-red-zone -mcmodel=kernel
+LOCAL_IP = @LOCAL_IP@
+CC = @KERNEL_CC@
+LD = @KERNEL_LD@
+CFLAGS = @KERNEL_CFLAGS@
 
-CC = cross/bin/x86_64-elf-gcc
-LD = cross/bin/x86_64-elf-ld
+CFILES = $(shell find sys/src/ -name "*.c")
 
 
 .PHONY: all
