--- a/Makefile.in
+++ b/Makefile.in
@@ -1,9 +1,9 @@
 INSTALL_DIR = /qnixx_install
 QEMU_ARGS = -cpu qemu64 -M q35 -m 3G -cdrom Qnixx.iso -boot d -smp 4 -rtc base=localtime -audiodev pa,id=audio0 -machine pcspk-audiodev=audio0 
 LOCAL_IP = @LOCAL_IP@
-CC = @KERNEL_CC@
-LD = @KERNEL_LD@
 CFLAGS = @KERNEL_CFLAGS@
+CC = cross/bin/x86_64-elf-gcc
+LD = cross/bin/x86_64-elf-ld
 
 CFILES = $(shell find sys/src/ -name "*.c")
 
