--- a/.github/workflows/mkimg.yml
+++ b/.github/workflows/mkimg.yml
@@ -20,6 +20,7 @@ jobs:
           sudo apt-get -y install nasm
           sudo apt-get -y install xorriso
           sudo apt-get -y install autoconf
+          bash tools/cross.sh
           autoconf
           ./configure
           make
