--- a/Makefile.in
+++ b/Makefile.in
@@ -11,6 +11,10 @@ CFILES = $(shell find sys/src/ -name "*.c")
 .PHONY: all
 all: cfiles asmfiles link limine cleanup
 	@cd usr; make
+	mv meta/initrd/ ./
+	cd initrd/; tar -cvf ../meta/system/initrd.sys *
+	cd ../
+	mv initrd/ meta/
 	@echo "Generating ISO..."
 	@mkdir -p iso_root
 	@mkdir -p iso_root/Qnixx
