Feat: Load from initial ramdisk.

--- a/etc/limine.cfg
+++ b/etc/limine.cfg
@@ -4,6 +4,6 @@ TIMEOUT=20
 
 PROTOCOL=limine
 KERNEL_PATH=boot:///Qnixx/kernel.sys
-MODULE_PATH=boot:///Qnixx/init.sys
+MODULE_PATH=boot:///Qnixx/initrd.sys
 RESOLUTION=1920x1080x32
 TERM_WALLPAPER_STYLE=centered
