--- a/meta/limine.cfg
+++ b/meta/limine.cfg
@@ -1,6 +1,6 @@
 TIMEOUT=60
-TERM_WALLPAPER=boot:///boot/background.bmp
-TERM_WALLPAPER_STYLE=stretched
+TERM_WALLPAPER=boot:///boot/cat.bmp
 
 :Qnixx
 PROTOCOL=limine
+KERNEL_PATH=boot:///boot/kernel.sys
