--- a/meta/limine.cfg
+++ b/meta/limine.cfg
@@ -1,5 +1,7 @@
 TIMEOUT=60
-TERM_WALLPAPER=boot:///boot/cat.bmp
+TERM_WALLPAPER=boot:///boot/qnixx.bmp
+TERM_FONT=boot:///boot/termfont.F16
+EDITOR_ENABLED=no
 
 :Qnixx
 PROTOCOL=limine
